--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,79 +1,26 @@
-name: Build Android APK
+name: Simple APK
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  workflow_dispatch:  # Permette build manuale
+    branches: [ main, master, 07-external-telegram-be ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - uses: actions/checkout@v3
+    
+    - name: Install Buildozer Action
+      uses: ArtemSBulgakov/buildozer-action@v1
+      id: buildozer
       with:
-        python-version: '3.11'
-
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          git zip unzip openjdk-17-jdk autoconf libtool pkg-config \
-          zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 \
-          cmake libffi-dev libssl-dev
-
-    - name: Set up environment variables
-      run: |
-        echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
-        echo "ANDROID_API_LEVEL=33" >> $GITHUB_ENV
-        echo "ANDROID_BUILD_TOOLS_VERSION=33.0.0" >> $GITHUB_ENV
-
-    - name: Install buildozer and dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install buildozer cython
-
-    - name: Set DEVELOPMENT_MODE to False for TV
-      run: |
-        sed -i 's/DEVELOPMENT_MODE = True/DEVELOPMENT_MODE = False/g' main.py
-
-    - name: Create release keystore
-      run: |
-        keytool -genkey -v -keystore my-release-key.keystore -alias my-key-alias \
-          -keyalg RSA -keysize 2048 -validity 10000 \
-          -storepass bibo46 -keypass bibo46 \
-          -dname "CN=TelemuTV,OU=App,O=DiegoB,L=Turin,S=Piedmont,C=IT"
-
-    - name: Build APK with buildozer
-      run: |
-        buildozer android debug
+        command: buildozer android debug
+        buildozer_version: stable
         
-    - name: List generated files
-      run: |
-        ls -la bin/ || echo "No bin directory found"
-        find . -name "*.apk" -type f || echo "No APK files found"
-
-    - name: Upload APK as artifact
-      uses: actions/upload-artifact@v4
-      if: success()
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
       with:
-        name: telemu-tv-apk
+        name: telemu-apk
         path: bin/*.apk
-        retention-days: 30
-
-    - name: Upload build logs on failure
-      uses: actions/upload-artifact@v4
-      if: failure()
-      with:
-        name: build-logs
-        path: |
-          .buildozer/
-          buildozer.spec
-        retention-days: 7
-        
